Added a pre text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>To Do List</h1>
+    <pre>Don't Forget to Follow it</pre>
     <div class="container">
         <input type="text" id="inputFiled"><button id="addToDo">+</button>
         <div class="to-dos" id="toDocontainer"></div>
